load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "convex_foothold_ros_receiver",
    srcs = ["convex_foothold_ros_receiver.cc"],
    hdrs = ["convex_foothold_ros_receiver.h"],
    tags = ["ros"],
    deps = [
        ":convex_foothold_set",
        ":poly_utils",
        "//lcmtypes:lcmt_robot",
        "@drake//:drake_shared_library",
        "@ros-local",
    ],
)

cc_library(
    name = "convex_foothold_lcm_systems",
    srcs = ["convex_foothold_lcm_systems.cc"],
    hdrs = ["convex_foothold_lcm_systems.h"],
    deps = [
        ":convex_foothold_set",
        "//lcmtypes:lcmt_robot",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "convex_foothold",
    srcs = ["convex_foothold.cc"],
    hdrs = ["convex_foothold.h"],
    deps = [
        "//lcmtypes:lcmt_robot",
        "@eigen",
    ],
)

cc_library(
    name = "poly_utils",
    srcs = ["polygon_utils.cc"],
    hdrs = ["polygon_utils.h"],
    tags = ["ros"],
    deps = [
        ":convex_foothold",
        ":convex_foothold_set",
        "//solvers:fast_osqp_solver",
        "@acd2d",
        "@ros-local",
    ],
)

cc_library(
    name = "convex_foothold_set",
    srcs = ["convex_foothold_set.cc"],
    hdrs = ["convex_foothold_set.h"],
    deps = [
        ":convex_foothold",
        "//common:eigen_utils",
        "//lcmtypes:lcmt_robot",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "polytest",
    srcs = ["test/polygon_utils_test.cc"],
    tags = ["ros"],
    deps = [
        ":poly_utils",
        "@gflags",
        "@ros",
    ],
)

cc_test(
    name = "convex_foothold_test",
    size = "small",
    srcs = ["test/convex_foothold_test.cc"],
    deps = [
        ":convex_foothold",
        ":convex_foothold_set",
        "//common",
        "//lcmtypes:lcmt_robot",
        "@drake//:drake_shared_library",
        "@drake//common/test_utilities",
        "@gtest//:main",
    ],
)
