load(
    "@drake//tools/skylark:drake_lcm.bzl",
    "drake_lcm_cc_library",
    "drake_lcm_java_library",
    "drake_lcm_py_library",
)
load(
    "@drake//tools/skylark:drake_java.bzl",
    "drake_java_binary",
)
load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

#Lcm libraries

#Lcm libraries
drake_lcm_cc_library(
    name = "lcmt_robot",
    lcm_package = "dairlib",
    lcm_srcs = glob(["*.lcm"]),
)

drake_lcm_java_library(
    name = "lcmtypes_robot_java",
    lcm_package = "dairlib",
    lcm_srcs = glob(["*.lcm"]),
    deps = ["@lcmtypes_bot2_core//:lcmtypes_bot2_core_java"],
)

drake_lcm_py_library(
    name = "lcmtypes_robot_py",
    add_current_package_to_imports = True,  # Use //:module_py instead.
    extra_srcs = ["__init__.py"],
    lcm_package = "dairlib",
    lcm_srcs = glob(["*.lcm"]),
    deps = [
        "@drake//:module_py",
        "@lcmtypes_bot2_core//:lcmtypes_bot2_core_py",
    ],
)

drake_java_binary(
    name = "dair-lcm-spy",
    main_class = "lcm.spy.Spy",
    visibility = ["//visibility:private"],
    runtime_deps = [
        ":lcmtypes_robot_java",
        "@drake//lcmtypes:lcmtypes_drake_java",
        "@lcmtypes_bot2_core//:lcmtypes_bot2_core_java",
        "@lcmtypes_robotlocomotion//:lcmtypes_robotlocomotion_java",
        "@optitrack_driver//lcmtypes:lcmtypes_optitrack",
    ],
)
