# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "parametrized_system",
    srcs = ["parametrized_system.cc"],
    hdrs = ["parametrized_system.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "swing_foot_reward_calculator",
    srcs = ["swing_foot_reward_calculator.cc"],
    hdrs = ["swing_foot_reward_calculator.h"],
    deps = [
        "//lcmtypes:lcmt_robot",
        "@drake//:drake_shared_library",
    ],
)
