# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "kinematic_constraint",
    srcs = [
        "kinematic_constraint.cc",
    ],
    hdrs = [
        "kinematic_constraint.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "multibody_solvers",
    srcs = [
        "multibody_solvers.cc",
    ],
    hdrs = [
        "multibody_solvers.h",
    ],
    deps = [
        ":contact_toolkit",
        "//solvers:nonlinear_constraint",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "com_pose_system.cc",
        "multibody_utils.cc",
    ],
    hdrs = [
        "com_pose_system.h",
        "multibody_utils.h",
    ],
    deps = [
        ":visualization_utils",
        "@drake//multibody/plant",
    ],
)

cc_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.cc",
    ],
    hdrs = [
        "visualization_utils.h",
    ],
    deps = [
        "//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "multipose_visualizer",
    srcs = [
        "multipose_visualizer.cc",
    ],
    hdrs = [
        "multipose_visualizer.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "multipose_visualizer_test",
    srcs = ["test/multipose_visualizer_test.cc"],
    deps = [
        ":multipose_visualizer",
        "//common",
    ],
)

cc_library(
    name = "contact_toolkit",
    srcs = [
        "contact_toolkit.cc",
    ],
    hdrs = [
        "contact_toolkit.h",
    ],
    deps = [
        ":utils",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "multibody_distance_constraint",
    srcs = [
        "multibody_distance_constraint.cc",
    ],
    hdrs = [
        "multibody_distance_constraint.h",
    ],
    deps = [
        ":utils",
        "@drake//:drake_shared_library",
    ],
)

cc_test(
    name = "multibody_utils_test",
    size = "small",
    srcs = ["test/multibody_utils_test.cc"],
    deps = [
        ":utils",
        "//common",
        "//examples/Cassie:cassie_urdf",
        "@drake//:drake_shared_library",
        "@gtest//:main",
    ],
)

cc_test(
    name = "contact_toolkit_test",
    size = "small",
    srcs = [
        "test/contact_toolkit_test.cc",
    ],
    tags = ["manual"],
    deps = [
        ":contact_toolkit",
        ":utils",
        "//examples/Cassie:cassie_utils",
        "@gtest//:main",
    ],
    size = "small",
)

cc_test(
    name = "kinematic_constraint_test",
    srcs = [
        "test/kinematic_constraint_test.cc",
    ],
    deps = [
        "//common",
        "//examples/PlanarWalker:urdf",
        ":kinematic_constraint",
        "@drake//common/test_utilities",
        "@gtest//:main",
    ],
    size = "small",
