# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "multibody_solvers",
    srcs = [
        "multibody_solvers.cc",
    ],
    hdrs = [
        "multibody_solvers.h",
    ],
    deps = [
        ":utils",
        "//multibody/kinematic",
        "//multibody/kinematic:constraints",
        "//solvers:nonlinear_constraint",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "single_rigid_body_plant",
    srcs = [
        "single_rigid_body_plant.cc",
    ],
    hdrs = [
        "single_rigid_body_plant.h",
    ],
    deps = [
        ":utils",
        "//multibody/kinematic",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "com_pose_system.cc",
        "multibody_utils.cc",
    ],
    hdrs = [
        "com_pose_system.h",
        "multibody_utils.h",
    ],
    deps = [
        "@drake//multibody/plant",
    ],
)

cc_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.cc",
    ],
    hdrs = [
        "visualization_utils.h",
    ],
    deps = [
        "//common:find_resource",
        "//multibody:utils",
        "//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "multipose_visualizer",
    srcs = [
        "multipose_visualizer.cc",
    ],
    hdrs = [
        "multipose_visualizer.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "pinocchio_plant",
    srcs = [
        "pinocchio_plant.cc",
    ],
    hdrs = [
        "pinocchio_plant.h",
    ],
    deps = [
        ":utils",
        "@drake//:drake_shared_library",
        "@pinocchio",
    ],
)

cc_library(
    name = "view_frame",
    srcs = ["view_frame.cc"],
    hdrs = ["view_frame.h"],
    deps = [
        "//multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "multipose_visualizer_test",
    srcs = ["test/multipose_visualizer_test.cc"],
    deps = [
        ":multipose_visualizer",
        "//common",
    ],
)

cc_test(
    name = "multibody_utils_test",
    size = "small",
    srcs = ["test/multibody_utils_test.cc"],
    deps = [
        ":utils",
        "//common",
        "//examples/Cassie:cassie_urdf",
        "@drake//:drake_shared_library",
        "@gtest//:main",
    ],
)

cc_test(
    name = "pinocchio_plant_test",
    size = "small",
    srcs = ["test/pinocchio_plant_test.cc"],
    tags = ["manual"],
    deps = [
        ":pinocchio_plant",
        ":utils",
        "//common",
        "//examples/Cassie:cassie_urdf",
        "@drake//common/test_utilities",
        "@gtest//:main",
    ],
)

cc_library(
    name = "ball_urdf",
    data = glob(["multibody/ball.urdf"]),
)
