# -*- python -*-

load("@drake//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "multibody_solvers",
    srcs = [
        "multibody_solvers.cc",
    ],
    hdrs = [
        "multibody_solvers.h",
    ],
    deps = [
        ":utils",
        "//multibody/kinematic",
        "//multibody/kinematic:constraints",
        "//solvers:nonlinear_constraint",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "com_pose_system.cc",
        "multibody_utils.cc",
        "stepping_stone_utils.cc",
    ],
    hdrs = [
        "com_pose_system.h",
        "multibody_utils.h",
        "stepping_stone_utils.h",
    ],
    deps = [
        "//geometry:convex_polygon",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "visualization_utils",
    srcs = [
        "visualization_utils.cc",
    ],
    hdrs = [
        "visualization_utils.h",
    ],
    deps = [
        "//common:find_resource",
        "//multibody:utils",
        "//systems/primitives",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "multipose_visualizer",
    srcs = [
        "multipose_visualizer.cc",
    ],
    hdrs = [
        "multipose_visualizer.h",
    ],
    deps = [
        ":utils",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "view_frame",
    srcs = ["view_frame.cc"],
    hdrs = ["view_frame.h"],
    deps = [
        "//multibody:utils",
        "//systems/framework:vector",
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "multipose_visualizer_test",
    srcs = ["test/multipose_visualizer_test.cc"],
    deps = [
        ":multipose_visualizer",
        "//common",
    ],
)

cc_test(
    name = "multibody_utils_test",
    size = "small",
    srcs = ["test/multibody_utils_test.cc"],
    deps = [
        ":utils",
        "//common",
        "//examples/Cassie:cassie_urdf",
        "@drake//:drake_shared_library",
        "@gtest//:main",
    ],
)

cc_library(
    name = "ball_urdf",
    data = glob(["multibody/ball.urdf"]),
)

cc_library(
    name = "geom_geom_collider",
    srcs = ["geom_geom_collider.cc"],
    hdrs = ["geom_geom_collider.h"],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_binary(
    name = "geom_geom_collider_test",
    srcs = ["test/geom_geom_collider_test.cc"],
    data = ["//examples/trifinger:trifinger_urdf"],
    deps = [
        ":geom_geom_collider",
        ":utils",
        "//common",
        "@drake//:drake_shared_library",
    ],
)
