package(default_visibility = ["//visibility:public"])

py_library(
    name = "dairlib-signal-scope",
    srcs = glob(["scripts/**"]) + [
        "startscope.py",
    ],
)

py_binary(
    name = "signal-scope-py",
    srcs = ["signal-scope.py"],
    data = ["@signal_scope"],
    main = "signal-scope.py",
    tags = ["manual"],
    deps = ["//lcmtypes:lcmtypes_robot_py"],
)

load("@drake//tools/skylark:drake_runfiles_binary.bzl", "drake_runfiles_binary")

drake_runfiles_binary(
    name = "signal-scope",
    tags = ["manual"],
    target = ":signal-scope-py",
)
