# -*- mode: python -*-
# vi: set ft=python :

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "c3_test",
    srcs = ["test/c3_test.cc"],
    deps = [
        ":c3"
    ],
)


py_binary(
    name = "c3_py_test",
    srcs = ["test/c3_py_test.py"],
    deps = [
        "//bindings/pydairlib/solvers:c3_py"
    ]
)

cc_library(
    name = "c3",
    srcs = [
        "c3.cc",
        "c3_miqp.cc",
    ],
    hdrs = [
        "c3.h",
        "c3_miqp.h",
        "c3_options.h",
    ],
    deps = [
        ":lcs",
        "@drake//:drake_shared_library",
        "@gurobi//:gurobi_cxx",
    ],
    copts = [
        "-fopenmp"
    ],
    linkopts = [
        "-lgomp"
    ]
)

cc_library(
    name = "lcs",
    srcs = [
        "lcs.cc",
        "lcs_factory.cc",
    ],
    hdrs = [
        "lcs.h",
        "lcs_factory.h",
    ],
    deps = [
        "//multibody/kinematic",
        "//multibody:geom_geom_collider",
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "constraints",
    deps = [
        ":constraint_factory",
        ":nonlinear_constraint",
    ]
)

cc_library(
    name = "constraint_factory",
    srcs = [
        "constraint_factory.cc",
    ],
    hdrs = [
        "constraint_factory.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "fast_osqp_solver",
    srcs = [
        "fast_osqp_solver.cc",
        "fast_osqp_solver_common.cc",
    ],
    hdrs = [
        "fast_osqp_solver.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
        "@osqp",
    ],
)

cc_library(
    name = "nonlinear_constraint",
    srcs = [
        "nonlinear_constraint.cc",
    ],
    hdrs = [
        "nonlinear_constraint.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "nonlinear_cost",
    srcs = [
        "nonlinear_cost.cc",
    ],
    hdrs = [
        "nonlinear_cost.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_library(
    name = "optimization_utils",
    srcs = [
        "optimization_utils.cc",
    ],
    hdrs = [
        "optimization_utils.h",
    ],
    deps = [
        "@drake//:drake_shared_library",
    ],
)

cc_test(
    name = "cost_constraint_approximation_test",
    size = "small",
    srcs = ["test/cost_constraint_approximation_test.cc"],
    deps = [
        "@drake//common/test_utilities:eigen_matrix_compare",
        ":optimization_utils",
        "@gtest//:main",
    ],
)


cc_binary(
    name = "lcs_test",
    srcs = ["test/lcs_test.cc"],
    deps = [
        ":c3",
        "//multibody:geom_geom_collider",
        "//multibody:utils",
        "//multibody/kinematic",
        "//common",
        "@drake//:drake_shared_library",
    ],
    data = ["//examples/trifinger:trifinger_urdf"],
)